--- a/.env
+++ b/.env
@@ -29,6 +29,16 @@ APP_SECRET=a7c7b21b875350370bbf92d325142fbe
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://root:@127.0.0.1:3306/quantech?serverVersion=5.7&charset=utf8mb4"
+DATABASE_URL="mysql://root:@127.0.0.1:3306/quantech"
 # DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/swiftmailer-bundle ###
+# For Gmail as a transport, use: "gmail://username:password@localhost"
+# For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
+# Delivery is disabled by default via "null://localhost"
+# use this to disable email delivery
+MAILER_URL=null://localhost
+###> symfony/mailer ###
+MAILER_DSN=smtp://quantechp@gmail.com:amvwpswlrvtcwmff@smtp.gmail.com:587
+###< symfony/swiftmailer-bundle ###
