--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,14 +1,32 @@
 security:
+    encoders:
+        App\Entity\Utilisateur:
+            algorithm: bcrypt
+            
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
         users_in_memory: { memory: null }
+        in_database:
+            entity:
+                class: App\Entity\Utilisateur
+                property: username
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
             anonymous: lazy
-            provider: users_in_memory
+            provider: in_database
+
+            form_login:
+                login_path: app_utilisateur_login
+                check_path: app_utilisateur_login
+                default_target_path: app_utilisateur_indexfront
+                always_use_default_target_path: true
+
+            logout:
+                path: app_utilisateur_logout
+                target: app_utilisateur_indexfront
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
@@ -20,4 +38,4 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+        # - { path: ^/utilisateur, roles: ROLE_USER }
