--- a/.env
+++ b/.env
@@ -32,3 +32,12 @@ APP_SECRET=99b9e633a55516bd03a65d6f4681e147
 DATABASE_URL="mysql://root:@127.0.0.1:3306/pidev?serverVersion=5.7&charset=utf8mb4"
 #DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/swiftmailer-bundle ###
+# For Gmail as a transport, use: "gmail://username:password@localhost"
+# For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
+# Delivery is disabled by default via "null://localhost"
+
+MAILER_URL=gmail://soulayma.jeribi@esprit.tn:213JFT3041@localhost?encryption=tls&auth_mode=oauth
+
+###< symfony/swiftmailer-bundle ###
